--- a/mopal/app/view/src/main/resources/com/mopal/view/PersonaFormListing_es.properties
+++ b/mopal/app/view/src/main/resources/com/mopal/view/PersonaFormListing_es.properties
@@ -1,10 +1,13 @@
-PersonaFormListing:      Inscripcion
+PersonaFormListing:      Inscripciones
 nombre:                  Nombre
 apellido:                Apellido
 localidad:               Localidad
 edad:                    Edad
 nivel:                   Nivel
 comunidad:               Comunidad
+asistenciaJueves:        J
+asistenciaViernes:       V
+asistenciaSabado:        S
 hijos:                   Hijos
 telefono:                Telefono
 contribucion:            Contribuyo
