Agrego localizacion de mensajes-ES

--- a/mopal/app/view/src/main/resources/com/mopal/view/NivelFormListing_es.properties
+++ b/mopal/app/view/src/main/resources/com/mopal/view/NivelFormListing_es.properties
@@ -1,22 +1,14 @@
-# Comunidad Form Listing
+# Nivel Form Listing
 # @Generated
-ComunidadFormListing:    Comunidades
-
-# Nivel Comunidad
-# @Generated
-nivelComunidad:          Nivel
-
-# Localidad
-# @Generated
-localidad:               Localidad
+NivelFormListing:        Niveles
 
 # Descripcion
 # @Generated
 descripcion:             Descripcion
 
-# Cantidad Personas
+# Orden
 # @Generated
-cantidad:                Cantidad de Personas
+orden:                   Orden
 
 # Editar
 # @Generated
