--- a/mopal/app/view/src/main/resources/com/mopal/view/PersonaFormListing_es.properties
+++ b/mopal/app/view/src/main/resources/com/mopal/view/PersonaFormListing_es.properties
@@ -1,16 +1,96 @@
+# Persona Form Listing
+# @Generated
 PersonaFormListing:      Inscripciones
+
+# Filtros
+# @Generated
+filtros:                 Filtros de búsqueda
+
+# Nombre
+# @Generated
+nombreFiltro.hint:       Nombre
+
+# Apellido
+# @Generated
+apellidoFiltro.hint:     Apellido
+
+# Localidad
+# @Generated
+localidadFiltro.hint:    Localidad
+
+# Nivel
+# @Generated
+nivelFiltro.hint:        Nivel
+
+# Comunidad
+# @Generated
+comunidadFiltro.hint:    Comunidad
+
+# Buscar
+# @Generated
+buscar:                  Buscar
+
+# Resetear
+# @Generated
+resetear:                Resetear
+
+# Nombre
+# @Generated
 nombre:                  Nombre
+
+# Apellido
+# @Generated
 apellido:                Apellido
+
+# Localidad
+# @Generated
 localidad:               Localidad
+
+# Edad
+# @Generated
 edad:                    Edad
+
+# Nivel
+# @Generated
 nivel:                   Nivel
+
+# Comunidad
+# @Generated
 comunidad:               Comunidad
+
+# J
+# @Generated
 asistenciaJueves:        J
+
+# V
+# @Generated
 asistenciaViernes:       V
+
+# S
+# @Generated
 asistenciaSabado:        S
+
+# Hijos
+# @Generated
 hijos:                   Hijos
+
+# Telefono
+# @Generated
 telefono:                Telefono
+
+# Contribuyo
+# @Generated
 contribucion:            Contribuyo
+
+# Editar
+# @Generated
+editarPersona:           Editar
+
+# Create
+# @Generated
 create:                  Agregar
+
+# Back
+# @Generated
 back:                    Volver
 
