--- a/mopal/app/view/src/main/resources/com/mopal/view/PersonaForm_es.properties
+++ b/mopal/app/view/src/main/resources/com/mopal/view/PersonaForm_es.properties
@@ -1,12 +1,87 @@
 # Persona Form
-PersonaForm:             Persona Form
+# @Generated
+PersonaForm:             Registro de nueva Persona
 
 # Nombre
+# @Generated
 nombre:                  Nombre
 
 # Apellido
+# @Generated
 apellido:                Apellido
 
-# Edad
-edad:                    Edad
+# Telefono
+# @Generated
+telefonoDeContacto:      Telefono
+
+# Localidad
+# @Generated
+localidad:               Localidad
+
+# Fecha Nacimiento
+# @Generated
+fechaNacimiento:         Fecha de Nacimiento
+
+# Email
+# @Generated
+email:                   Email
+
+# Estado Civil
+# @Generated
+tipoEstadoCivil:         Estado Civil
+
+# Cantidad Hijos
+# @Generated
+cantidadHijos:           Cantidad Hijos
+
+# Tipo Camino
+# @Generated
+tipoCamino:              Camino
+
+# Nivel
+# @Generated
+nivel:                   Nivel
+
+# Comunidad
+# @Generated
+comunidad:               Comunidad
+
+# Cantidad Pascuas
+# @Generated
+cantidadPascuas:         Cantidad de Pascuas
+
+# Asistencia Jueves
+# @Generated
+colAsistenciaJueves:     Asistencia Jueves
+
+# Jueves
+# @Generated
+colAsistenciaJueves.placeholder:\
+                         Jueves
+
+# Asistencia Viernes
+# @Generated
+colAsistenciaViernes:    Asistencia Viernes
+
+# Viernes
+# @Generated
+colAsistenciaViernes.placeholder:\
+                         Viernes
+
+# Asistencia Sabado
+# @Generated
+colAsistenciaSabado:     Asistencia Sabado
+
+# Sabado
+# @Generated
+colAsistenciaSabado.placeholder:\
+                         Sabado
+
+# Monto Contribucion
+# @Generated
+montoContribucion:       Monto de Contribucion
+
+# Observaciones
+# @Generated
+observaciones:           Observaciones
 
