Agregado de localizacion de mensajes

--- a/mopal/app/view/src/main/resources/com/mopal/view/AsistenteAsambleaForm_es.properties
+++ b/mopal/app/view/src/main/resources/com/mopal/view/AsistenteAsambleaForm_es.properties
@@ -1,7 +1,6 @@
-# Registro de Nueva Persona
+# Asistente Asamblea Form
 # @Generated
-AsistenteJornadaPentecostesForm:\
-                  Registrar Inscripcion a Jornada de Pentecostes      
+AsistenteAsambleaForm:   Registrar Inscripcion para Asamblea   
 
 # Evento
 # @Generated
@@ -11,13 +10,11 @@ evento:                  Evento
 # @Generated
 persona:                 Persona
 
-# Monto Contribucion
-# @Generated
-montoContribucion:       Monto Contribucion
-
 # Observaciones
 # @Generated
 observaciones:           Observaciones
 
+# Personas a cargo
+# @Generated
 addPersonasRelacionadas: Personas a cargo
 
