Agregado de Formularios para busqueda de Encuentros

--- a/mopal/app/view/src/main/resources/com/mopal/view/AsignacionComunidadPastorListingForm_es.properties
+++ b/mopal/app/view/src/main/resources/com/mopal/view/AsignacionComunidadPastorListingForm_es.properties
@@ -1,7 +1,9 @@
 # Asignacion Comunidad Pastor Listing Form
 # @Generated
 AsignacionComunidadPastorListingForm:\
-                         Listado de Asignacion Comunidad-Pastor
+                         Listado de Asignacion: Comunidad-Pastor
+
+nivel:                  Nivel
 
 # Comunidad
 # @Generated
@@ -15,3 +17,4 @@ pastor:                  Pastor
 # @Generated
 create:                  Agregar
 
+btnEditar:               Editar
