--- a/mopal/app/view/src/main/resources/com/mopal/view/AsignacionUsuarioAsistenteListingForm_es.properties
+++ b/mopal/app/view/src/main/resources/com/mopal/view/AsignacionUsuarioAsistenteListingForm_es.properties
@@ -1,7 +1,7 @@
 # Asignacion Usuario Asistente Listing Form
 # @Generated
 AsignacionUsuarioAsistenteListingForm:\
-                         Listado de Asignacion Usuario-Persona
+                         Listado de Asignacion: Usuario-Persona
 
 # Usuario
 # @Generated
