--- a/mopal/app/view/src/main/resources/com/mopal/view/EncuentroListingForm_es.properties
+++ b/mopal/app/view/src/main/resources/com/mopal/view/EncuentroListingForm_es.properties
@@ -5,6 +5,7 @@ EncuentroListingForm:        Listado de Encuentros
 nivel:                   Nivel
 comunidad:               Comunidad
 fecha:                   Fecha Encuentro
+asistencias:             Asistencia
 observaciones:           Observaciones
 btnEditar:               Editar
 btnAsistencias:          Asistencias
