--- a/mopal/app/view/src/main/resources/com/mopal/view/AsistentesMenu_es.properties
+++ b/mopal/app/view/src/main/resources/com/mopal/view/AsistentesMenu_es.properties
@@ -4,5 +4,5 @@ AsistentesMenu:          Personas
 
 # Asistente Form Listing
 # @Generated
-AsistenteFormListing:    Asistente Form Listing
+AsistenteFormListing:    Listado de Personas
 
