--- a/mopal/app/view/src/main/resources/com/mopal/view/ConfiguracionMenu_es.properties
+++ b/mopal/app/view/src/main/resources/com/mopal/view/ConfiguracionMenu_es.properties
@@ -4,17 +4,17 @@ ConfiguracionMenu:       Configuracion
 
 # Localidad Form Listing
 # @Generated
-LocalidadFormListing:    Localidad Form Listing
+LocalidadFormListing:    Localidades
 
 # Nivel Form Listing
 # @Generated
-NivelFormListing:        Nivel Form Listing
+NivelFormListing:        Niveles
 
 # Comunidad Form Listing
 # @Generated
-ComunidadFormListing:    Comunidad Form Listing
+ComunidadFormListing:    Comunidades
 
 # Permisos  Menu
 # @Generated
-PermisosMenu:            Permisos  Menu
+PermisosMenu:            Comunidad-Pastor
 
