--- a/mopal/app/view/src/main/resources/com/mopal/view/EncuentrosMenu_es.properties
+++ b/mopal/app/view/src/main/resources/com/mopal/view/EncuentrosMenu_es.properties
@@ -4,5 +4,5 @@ EncuentrosMenu:          Encuentros
 
 # Encuentro Listing Form
 # @Generated
-EncuentroListingForm:    Encuentro Listing Form
+EncuentroListingForm:    Listado de Encuentros
 
