--- a/mopal/app/view/src/main/resources/com/mopal/view/EventosMenu_es.properties
+++ b/mopal/app/view/src/main/resources/com/mopal/view/EventosMenu_es.properties
@@ -4,7 +4,7 @@ EventosMenu:             Eventos
 
 # Evento Listing
 # @Generated
-EventoListing:           Evento Listing
+EventoListing:           Listado de Eventos
 
 # Evento  Activo
 # @Generated
