--- a/mopal/app/view/src/main/resources/com/mopal/view/AsistenteFormListing_es.properties
+++ b/mopal/app/view/src/main/resources/com/mopal/view/AsistenteFormListing_es.properties
@@ -54,6 +54,8 @@ localidad:               Localidad
 # @Generated
 fechaNacimiento:         Fecha Nacimiento
 
+# Edad
+# @Generated
 edad:                    Edad
 
 # Nivel
