--- a/mopal/app/view/src/main/resources/com/mopal/view/AsistenteForm_es.properties
+++ b/mopal/app/view/src/main/resources/com/mopal/view/AsistenteForm_es.properties
@@ -30,7 +30,7 @@ imagen:                  Foto
 # @Generated
 tabDatosDeContacto:      Datos de Contacto
 
-# Correo electrï¿½nico
+# Correo electr?nico
 # @Generated
 email:                   Correo electronico
 
@@ -78,13 +78,13 @@ estudioTerminado:        Terminado
 # @Generated
 tabDatosDeCamino:        Datos de Camino
 
-# Aï¿½o de Ingreso
+# Ano de Ingreso
 # @Generated
-anoIngresoObra:          AÃ±o de Ingreso
+anoIngresoObra:          Año de Ingreso
 
-# Aï¿½o de Primera Pascua
+# Ano de Primera Pascua
 # @Generated
-anoPrimeraPascua:        AÃ±o de Primera Pascua
+anoPrimeraPascua:        Año de Primera Pascua
 
 # Nivel
 # @Generated
